<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:gravity="top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPortadaModif"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/imagendefecto" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:layout_marginVertical="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreCancion"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombreModif"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/artistaCancion"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etArtistaModif"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/modificar" />

</LinearLayout>
